--- a/doc/质量控制详细对比.md
+++ b/doc/质量控制详细对比.md
@@ -134,19 +134,20 @@ smarca2_genes = [g for g in possible_brm if 'SMARCA2' in str(g).upper()]
 ### 过滤标准
 ```python
 # 保留在≥10%样本中表达>1的基因
-expr_filtered = expr[(expr > 1).sum(axis=1) >= 0.1 * expr.shape[1]]
+min_samples = int(0.1 * expr.shape[1])  # 先转换为整数
+expr_filtered = expr[(expr > 1).sum(axis=1) >= min_samples]
 ```
 
 ### 过滤参数设定
 - **表达阈值**: >1 (RSEM标准化值)
-- **样本比例**: ≥10% 样本 (≥31个样本)
+- **样本比例**: ≥10% 样本 (≥30个样本)
 - **生物学意义**: 排除噪音基因，保留生物学相关基因
 
 ### 前后对比
 | 指标 | 过滤前 | 过滤后 | 变化 | 百分比 |
 |------|--------|--------|------|--------|
-| **总基因数** | 20,532 | 18,551 | -1,981 | -9.6% |
-| **保留基因** | - | 18,551 | - | 90.4% |
+| **总基因数** | 20,532 | 18,570 | -1,962 | -9.6% |
+| **保留基因** | - | 18,570 | - | 90.4% |
 | **样本数** | 307 | 307 | 0 | 100% |
 | **数据质量** | 混合 | 高质量 | 提升 | - |
 
@@ -172,7 +173,7 @@ expr_filtered = expr[(expr > 1).sum(axis=1) >= 0.1 * expr.shape[1]]
 # log2转换并计算中位数
 brm_expr = np.log2(expr.loc[brm_gene] + 1)
 brm_median = np.median(brm_expr)
-groups = np.where(brm_expr > brm_median, "High", "Low")
+groups = np.where(brm_expr >= brm_median, "High", "Low")
 ```
 
 ### 分组结果对比
@@ -250,7 +251,7 @@ assert expr_filtered.shape[1] > 50, "样本数量不足"
 ### 数据流转全程对比
 ```
 原始数据 → 格式清理 → 缺失值处理 → 基因过滤 → 最终分析数据
-20,532×308 → 20,531×308 → 20,532×307 → 18,551×307 → 18,551×307
+20,532×308 → 20,531×308 → 20,532×307 → 18,570×307 → 18,570×307
 ```
 
 ### 质量提升指标
